byobu (5.109) unreleased; urgency=medium

  * usr/lib/byobu/include/icons, usr/lib/byobu/reboot_required,
    usr/lib/byobu/updates_available:
    - add an checkbox icon
    - fix formatting again
  * usr/lib/byobu/include/icons, usr/lib/byobu/include/select-
    session.py, usr/lib/byobu/reboot_required,
    usr/lib/byobu/updates_available:

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 31 May 2016 10:03:15 -0500

byobu (5.108-0ubuntu1) yakkety; urgency=medium

  [ Dustin Kirkland ]
  * usr/lib/byobu/updates_available:
    - remove trailing whitespace
  * usr/lib/byobu/battery:
    - only use POWER_SUPPLY_CAPACITY if neither POWER_SUPPLY_ENERGY_NOW nor
      POWER_SUPPLY_CHARGE_NOW are available; important for summing
      multiple batteries

  [ Kevin Mark and Dustin Kirkland ]
  * usr/lib/byobu/uptime:
    - fix uptime status on MacOS

 -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 31 May 2016 10:03:12 -0500

byobu (5.107-0ubuntu1) yakkety; urgency=medium

  * usr/bin/manifest:
    - remove http, breaks pastebinit
  * usr/bin/manifest:
    - fix manifest url
  * usr/bin/wifi-status:
    - use tmux target pane

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 09 May 2016 18:26:20 -0500

byobu (5.106-0ubuntu1) xenial; urgency=medium

  * usr/lib/byobu/include/tmux-send-command-to-all-panes:
    - fix breakage on sending command to all panes

 -- Dustin Kirkland <kirkland@ubuntu.com>  Thu, 14 Apr 2016 11:21:49 -0500

byobu (5.105-0ubuntu1) xenial; urgency=medium

  [ Dustin Kirkland ]
  * usr/share/man/man1/byobu.1:
    - update examples
  * debian/control:
    - pastebinit needs to be in the recommends
  * usr/lib/byobu/swap, usr/share/man/man1/byobu.1:
    - switch swap to black on green, white on green
      was unreadable
  * usr/bin/byobu-ctrl-a.in:
    - silence stderr
  * usr/share/byobu/profiles/bashrc:
    - fix color comment
  * usr/bin/byobu-janitor.in:
    - no longer default to enabling ec2 status, LP: #1564320