@@ -1,5 +1,6 @@
 byobu (5.109) unreleased; urgency=medium
 
+  [ Dustin Kirkland ]
   * usr/lib/byobu/include/icons, usr/lib/byobu/reboot_required,
     usr/lib/byobu/updates_available:
     - add an checkbox icon
@@ -7,6 +8,12 @@ byobu (5.109) unreleased; urgency=medium
   * usr/lib/byobu/include/icons, usr/lib/byobu/include/select-
     session.py, usr/lib/byobu/reboot_required,
     usr/lib/byobu/updates_available:
+
+  [ Grant Likely ]
+  * usr/lib/byobu/include/select-session.py:
+    -  Pass command name in argument list
+       + When calling os.execpv(), make sure the first argument in the argument
+         list is the command name so that the command shows up in tools like ps
 
  -- Dustin Kirkland <kirkland@ubuntu.com>  Tue, 31 May 2016 10:03:15 -0500
 
